--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,7 +17,6 @@
     padding: 0;
 
     font-family: 'Oswald', sans-serif;
-
 }
 
 
@@ -270,11 +269,13 @@ body {
 }
 
 .modal-content {
-    margin: 10% auto; /* 15% from the top and centered */
+    margin: 10% auto;
     width: 50%; 
     border-radius: 10px;
     overflow: hidden; /* Ensures children don't overflow the parent's rounded corners */
-    background-color: white;  
+
+    background-color: light-dark(var(--color-light-mode), var(--color-dark-mode));
+    color: light-dark(var(--color-light-mode-text), var(--color-dark-mode-text));
 }
 
 .modal-header {
@@ -295,21 +296,19 @@ body {
 
 .modal-body {
     padding: 16px;
-    background-color: light-dark(var(--color-light-mode), var(--color-dark-mode));
-    color: light-dark(var(--color-light-mode-text), var(--color-dark-mode-text));
+    padding-top: 0px !important;
 }
 
 .modal-body details {
     font-weight: bold;
     margin-top: 15px;
     /* border-bottom: 1px solid var(--color-light-mode-text); */
-    border-bottom: 1px solid grey;
+    /* border-bottom: 1px solid grey; */
 }
 
 .modal-body details p, ul {
     font-weight: normal;
     list-style-type:disc;
-    margin-top: 5px;
     margin-left: 50px;
 }
 
